Closed Bug 169690 Opened 22 years ago Closed 22 years ago

Startup crashes following install [@ HaveDecodedRow]

Categories

(Core :: Graphics: ImageLib, defect)

x86
Windows 2000
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: greer, Assigned: pavlov)

Details

(Keywords: crash, topcrash)

Crash Data

Attachments

(1 file, 1 obsolete file)

This stack is showing up as a topcrash in the M1.2a release (as well as M1.0 and M1.1 and Trunk). I'm betting this is INVALID and is a result of improper installations into directories that contained (a) previous installation(s) of the browser. (I could be wrong.) I would be interested to know what files are left by the uninstaller that might precipitate these crash? And can anybody recreate it internally by installing over an old release? Stack Trace: HaveDecodedRow [c:/builds/seamonkey/mozilla/modules/libpr0n/decoders/gif/nsGIFDecoder2.cpp line 429] output_row [c:/builds/seamonkey/mozilla/modules/libpr0n/decoders/gif/GIF2.cpp line 234] do_lzw [c:/builds/seamonkey/mozilla/modules/libpr0n/decoders/gif/GIF2.cpp line 425] gif_write [c:/builds/seamonkey/mozilla/modules/libpr0n/decoders/gif/GIF2.cpp line 1040] nsGIFDecoder2::ProcessData [c:/builds/seamonkey/mozilla/modules/libpr0n/decoders/gif/nsGIFDecoder2.cpp line 251] ReadDataOut [c:/builds/seamonkey/mozilla/modules/libpr0n/decoders/gif/nsGIFDecoder2.cpp line 196] nsPipe::nsPipeInputStream::ReadSegments [c:/builds/seamonkey/mozilla/xpcom/io/nsPipe2.cpp line 420] nsGIFDecoder2::WriteFrom [c:/builds/seamonkey/mozilla/modules/libpr0n/decoders/gif/nsGIFDecoder2.cpp line 271] ReadDataOut [c:/builds/seamonkey/mozilla/modules/libpr0n/decoders/gif/nsGIFDecoder2.cpp line 193] ProxyListener::OnDataAvailable [c:/builds/seamonkey/mozilla/modules/libpr0n/src/imgLoader.cpp line 736] ProxyListener::OnDataAvailable [c:/builds/seamonkey/mozilla/modules/libpr0n/src/imgLoader.cpp line 736] nsJARChannel::OnDataAvailable [c:/builds/seamonkey/mozilla/netwerk/protocol/jar/src/nsJARChannel.cpp line 633] nsOnDataAvailableEvent::HandleEvent [c:/builds/seamonkey/mozilla/netwerk/base/src/nsStreamListenerProxy.cpp line 204] PL_HandleEvent [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 644] PL_ProcessPendingEvents [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 577] _md_EventReceiverProc [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 1309] USER32.dll + 0x3c076 (0x77d4c076) USER32.dll + 0x3c076 (0x77d4c076) _except_handler3() kernel32.dll + 0x3bb86 (0x77e7bb86) Source File : c:/builds/seamonkey/mozilla/modules/libpr0n/decoders/gif/nsGIFDecoder2.cpp line : 429 (11143670) URL: weatherbug.com (11124264) URL: http://www.mozilla.org/start (11124240) URL: http://www.mozilla.org/start (11100469) URL: http://www.ask.com (11100363) URL: http://www.ask.com (11078686) URL: beta.dizkartes.nl (11078686) Comments: during re-installation of mozilla 1.2a (11074659) URL: www.mozilla.org (11074622) URL: www.mozilla.org (11065005) Comments: just starting it :( reinstalled it 3 times but crash at startup :( (11059470) URL: http://sports.chosun.com/ (11059470) Comments: I installed and ran Mozilla 1.2alpha after running build 2002091304 (11039912) Comments: When trying to start the new Mozilla (11001844) URL: http://sports.chosun.com/ (11001844) Comments: I uninstalled and re-installed Mozilla 1.2alpha and it crashed immediately again. I had build 2002091313 installed before... is there something in the profile causing the crash? (11001807) URL: http://sports.chosun.com/ (11001807) Comments: Yet another crash just as Mozilla was starting. (11001794) URL: http://sports.chosun.com/ (11001794) Comments: Mozilla crash immediately after starting. (11001776) URL: http://sports.chosun.com/ (11001776) Comments: I installed Mozilla 1.2alpha and it crashed as it started up. (10987430) Comments: I had just installed 1.2a over a nightly build. It crashed when first being launched automatically by the install program. (10969387) Comments: crash on startup (10958733) Comments: starting mozilla after having uninstalled 1.2b (due to a bug with m&n and it loosing my preferences) and reinstalling 1.2a 1.2b was uninstalled via add/remove programs (10937167) Comments: Crashes when starting 1.2 alpha first launch after install
Keywords: crash, topcrash
This stack looks like bug 124767 (but that bug is MAC only)
Attached patch Null Check patch (obsolete) — Splinter Review
I also agree that this is caused by people installing over an existing application. However, might as well plug up the hole. Code wasn't checking if do_CreateInstance failed. This patch will probably prevent the crash, but result in a blank GIF. Figuring out why the CI failed is a seperate issue (and like I said, probably due to people installing over an existing version)
This is a simple patch, if anyone already CC'd on this could give it a r=, I'd be gratefull. If not, I'll seek a reviewer out when I get the time.
Keywords: patch, review
Attached patch Null Check PatchSplinter Review
Combined null check with init check, as per tor's comments on IRC. (init check failure returns 0 as well)
Attachment #103521 - Attachment is obsolete: true
Comment on attachment 103579 [details] [diff] [review] Null Check Patch r=biesi (transfer), sr=tor
Attachment #103579 - Flags: superreview+
Attachment #103579 - Flags: review+
Comment on attachment 103579 [details] [diff] [review] Null Check Patch a=roc+moz for trunk
Attachment #103579 - Flags: approval+
cvs commit: Examining . Checking in nsGIFDecoder2.cpp; /cvsroot/mozilla/modules/libpr0n/decoders/gif/nsGIFDecoder2.cpp,v <-- nsGIFDecoder2.cpp new revision: 1.39; previous revision: 1.38 done
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Crash Signature: [@ HaveDecodedRow]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: