bug 169690 patch by paper@animecity.nu r=biesi sr=tor a=roc+moz crash in HaveDecodedRow